--- a/components/widgets/Menu/Menu.module.css
+++ b/components/widgets/Menu/Menu.module.css
@@ -9,5 +9,25 @@
 }
 
 .menu li {
-  padding: 0 10px;
+  padding: 0 15px;
+}
+
+.menu li * {
+  vertical-align: sub;
+}
+
+.menu li a {
+  color: #666;
+  font-weight: bold;
+  text-decoration: none;
+  font-size: 16px;
+}
+
+.menu li a:hover {
+  color: rgb(76, 182, 253);
+}
+
+.menu li img {
+  height: 20px;
+  margin-right: 5px;
 }
